content/modules/ROOT/examples/latest-tag-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-latest-tag
  namespace: policy-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-latest-tag
  template:
    metadata:
      labels:
        app: test-latest-tag
    spec:
      containers:
      - name: nginx
        image: docker.io/library/nginx:latest
