content/modules/ROOT/examples/privileged-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-privileged-app
  namespace: policy-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-privileged
  template:
    metadata:
      labels:
        app: test-privileged
    spec:
      containers:
      - name: nginx
        image: docker.io/library/nginx:1.27
        securityContext:
          privileged: true
