content/modules/ROOT/examples/unapproved-external-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unapproved-external-app
  namespace: policy-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: external
  template:
    metadata:
      labels:
        app: external
    spec:
      containers:
      - name: app
        image: docker.io/library/ubuntu:latest
